@@ -1,6 +1,8 @@
-package com.mutation.runner;
+package com.mutation;
 
 import java.util.List;
+
+import com.mutation.runner.ClassDescription;
 
 public interface IClassSetResolver {
 
