@@ -2,6 +2,7 @@
 Change History (newest on top)
 ---------------------------------------------------------------------------
 20070512 (alex)
+- moved resolvers to native project as they are irrelevant for the mutation runner itself
 - extracted class ClassDescription into own java source file
 - removed unnecessary mutant generator interface
 - Replaced Set with List everywhere due to testability
